tests/ui/where-clauses/where-for-self.stderr
error[E0316]: nested quantification of lifetimes
  --> $DIR/where-for-self.rs:15:26
   |
LL |     where for<'a> &'a T: for<'b> Bar<'b>
   |                          ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0316`.
